Fixing dark mode

--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,7 @@ button:hover {
   user-select: none;
   padding: 2px;
   transition: all 0.2s ease-in-out;
-  border: 3px solid rgba(255, 255, 255, 0.4);
+  border: 3px solid rgba(58, 58, 58, 0.64);
   border-radius: 16px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -308,7 +308,7 @@ input:checked + .slider.round:before {
   width: 24px; /* Adjust the height and width to make it a circle */
   left: 4px;
   bottom: 4px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(58, 58, 58, 0.64);
   border-radius: 50%; /* Make the thumb a perfect circle */
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -609,6 +609,9 @@ input:checked + .slider.round:before {
   z-index: 999; /* Ensure it's below the floating button */
   padding: 10px;
   border-radius: 8px;
+}
+.dark-mode .color-panel {
+  background-color: var(--dark-mode-theme-collor);
 }
 
 .color-option {
